--- a/02_Intro_to_DataFrames.Rmd
+++ b/02_Intro_to_DataFrames.Rmd
@@ -165,10 +165,18 @@ family                                       # view our result!
 
 ## Exercises  {#Exercises_IntroDataFrames}
 
-1. Create a data frame "by hand" with the names, ages, and heights of your own family. *If this feels excessively personal, feel free to make up people or include pets.*
+### Exercise 1 {-}
 
-2. Calculate the mean age among your family.
+Create a data frame "by hand" with the names, ages, and heights of your own family. *If this feels excessively personal, feel free to make up people or include pets.*
 
-3. We can load data directly from the internet. Dr. Sonderegger has many spreadsheet files hosted on GitHub. Lets use this file https://raw.githubusercontent.com/dereksonderegger/570L/master/data-raw/Example_1.csv. Because the `readr` package doesn't care whether a file is on your local computer or on the Internet, we'll use this file by downloading it directly through our R code.
-    a) Start the import wizard using: `File -> Import Dataset -> From Text (readr) ...` and input the above web URL. Click the update button near the top to cause the wizard to preview the result.
-    b) Save the generated code to your Rmarkdown file and show the first few rows using the `head()` command.
+### Exercise 2 {-}
+
+Calculate the mean age among your family.
+
+### Exercise 3 {-}
+
+We can load data directly from the internet. Dr. Sonderegger has many spreadsheet files hosted on GitHub. Lets use this file https://raw.githubusercontent.com/dereksonderegger/570L/master/data-raw/Example_1.csv. Because the `readr` package doesn't care whether a file is on your local computer or on the Internet, we'll use this file by downloading it directly through our R code.
+
+**a)** Start the import wizard using: `File -> Import Dataset -> From Text (readr) ...` and input the above web URL. Click the update button near the top to cause the wizard to preview the result.
+
+**b)** Save the generated code to your Rmarkdown file and show the first few rows using the `head()` command.
